--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -99,281 +99,296 @@ footer
   // padding-bottom: 3vw
   
   
-  #top-region
-    margin: 0 0 2vw 0
-    //position: sticky
-    top: 10%
+#top-region
+  margin: 0 0 2vw 0
+  //position: sticky
+  top: 10%
+  left: 50%
+
+  #intro
+    position: relative
+    transform: translate(-50%, 0)
     left: 50%
-
-    #intro
-      position: relative
-      transform: translate(-50%, 0)
-      left: 50%
+    display: flex
+    flex-direction: row
+    justify-content: space-around
+    background-color: white
+    border-radius: 3vw
+    width: auto
+    padding: 1.5vw
+    border: solid 2px #FFCFBF
+    z-index: 3
+    
+    #info
       display: flex
-      flex-direction: row
-      justify-content: space-around
-      background-color: white
-      border-radius: 3vw
-      width: auto
-      padding: 1.5vw
-      border: solid 2px #FFCFBF
-      z-index: 3
+      flex-direction: column
+      justify-content: space-start
+      align-items: center
       
-      #info
-        display: flex
-        flex-direction: column
-        justify-content: space-start
-        align-items: center
+      #user-img
+        cursor: pointer
+        border-radius: 50%
         
-        #user-img
-          cursor: pointer
-          border-radius: 50%
-          
-          input
-            display: none
-              
-          #editpicfilter:hover
-            font-size: 1.33vw
-          
-          #editpicfilter
-            display: block
-            position: absolute
-            width: 13.6vw
-            height: 13.6vw
-            border-radius: 50%
-            background-color: white
-            opacity: 0.7
-            text-align: center
-            font-size: 1.3vw
-            line-height: 13.6vw
-            color: #505050
+        input
+          display: none
             
-          #fileselectedfilter
-            display: none
-            position: absolute
-            width: 13.6vw
-            height: 13.6vw
-            border-radius: 50%
-            background-color: white
-            opacity: 0.7
-            text-align: center
-            font-size: 1.3vw
-            line-height: 13.6vw
-            color: #505050
-          
-        #user-img
-          width: 13vw
-          height: 13vw
+        #editpicfilter:hover
+          font-size: 1.33vw
+        
+        #editpicfilter
+          display: block
+          position: absolute
+          width: 13.6vw
+          height: 13.6vw
           border-radius: 50%
-          border: solid 0.3vw
-          border-color: #FDFDFD
           background-color: white
-          margin-bottom: 0.5vh
-        #user-name
-          font-size: 2vw
-          margin-top: 0.5vw
-          margin-bottom: 0.5vw
-        #school-info
-          display: flex
-          flex-direction: row
-          margin-bottom: 5%
-          color: #555555
-          #department
-            font-size: 1.2vw
-            margin-right: 0.5vw
-          #grade
-            font-size: 1vw
-            line-height: 1.2vw
+          opacity: 0.7
+          text-align: center
+          font-size: 1.3vw
+          line-height: 13.6vw
+          color: #505050
           
-          input
-            width: 6vw
-            border-radius: 3vw
-            outline: none
-            border: none
-            padding: 0.3vw 0 0.3vw 1vw
-
-            background-color: var(--background-color-field)
-          input::placeholder
-            font-size: 0.8vw
-      
-      #description-tag
+        #fileselectedfilter
+          display: none
+          position: absolute
+          width: 13.6vw
+          height: 13.6vw
+          border-radius: 50%
+          background-color: white
+          opacity: 0.7
+          text-align: center
+          font-size: 1.3vw
+          line-height: 13.6vw
+          color: #505050
+        
+      #user-img
+        width: 13vw
+        height: 13vw
+        border-radius: 50%
+        border: solid 0.3vw
+        border-color: #FDFDFD
+        background-color: white
+        margin-bottom: 0.5vh
+      #user-name
+        font-size: 2vw
+        margin-top: 0.5vw
+        margin-bottom: 0.5vw
+      #school-info
         display: flex
-        flex-direction: column
-        width: 73%
+        flex-direction: row
+        margin-bottom: 5%
+        color: #555555
+        #department
+          font-size: 1.2vw
+          margin-right: 0.5vw
+        #grade
+          font-size: 1vw
+          line-height: 1.2vw
         
-        
-        #description-background
+        input
+          width: 6vw
+          border-radius: 3vw
+          outline: none
+          border: none
+          padding: 0.3vw 0 0.3vw 1vw
+
           background-color: var(--background-color-field)
-          //border: solid 2px
-          border-radius: 1.3vw
-          //border-color: #3AEDC2
-          padding: 1.5vw 1vw
-          width: auto
-          margin-bottom: 0.5vw
-          
-          #description
-            font-size: 1.25vw
-            padding-left: 0.5vw
-          #descriptionarea
-            border: none
-            background-color: #F9F9F9
-            font-size: 1.25vw
-            padding-left: 0.5vw
-            resize: none
-            height: 2.5vw
-            width: 97%
-            padding: 0.5vw
-            border-radius: 0.6vw
-            outline: none
-            color: #666666
-          #descriptionarea:focus
-            color: black
+        input::placeholder
+          font-size: 0.8vw
+    
+    #description-tag
+      display: flex
+      flex-direction: column
+      width: 73%
+      
+      
+      #description-background
+        background-color: var(--background-color-field)
+        //border: solid 2px
+        border-radius: 1.3vw
+        //border-color: #3AEDC2
+        padding: 1.5vw 1vw
+        width: auto
+        margin-bottom: 0.5vw
         
-        .tag-field
-          background-color: var(--background-color-field)
-          border-radius: 1.5vw
-          margin-bottom: 0.5vw
+        #description
+          font-size: 1.25vw
+          padding-left: 0.5vw
+        #descriptionarea
+          border: none
+          background-color: #F9F9F9
+          font-size: 1.25vw
+          padding-left: 0.5vw
+          resize: none
+          height: 2.5vw
+          width: 97%
           padding: 0.5vw
-          width: auto
-          display: flex
-          flex-direction: row
-          flex-wrap: wrap;
-          align-items: center;
-          justify-content: flex-start;
-          p
-            font-size: 0.9vw
-            margin: 0 0.5vw
-            padding: 0.3vw
-            text-align: center
-          .deletetag
-            position: absolute
+          border-radius: 0.6vw
+          outline: none
+          color: #666666
+        #descriptionarea:focus
+          color: black
+      
+      .tag-field
+        background-color: var(--background-color-field)
+        border-radius: 1.5vw
+        margin-bottom: 0.5vw
+        padding: 0.5vw
+        width: auto
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: flex-start;
+        p
+          font-size: 0.9vw
+          margin: 0 0.5vw
+          padding: 0.3vw
+          text-align: center
+        .deletetag
+          position: absolute
+          display: none
+          transform: translate(-50%, -100%)
+          left: 50%
+          margin: 0
+          padding: 0.3vw 0
+          font-weight: 900
+          color: #555555
+          
+          
+          
+        .tag-style
+          position: relative
+          min-width: 4vw
+          background-color: #FFCFBF
+          border-radius: 1vw
+          margin: 0.2vw
+          cursor: pointer
+
+          .tag-commend
             display: none
-            transform: translate(-50%, -100%)
-            left: 50%
-            margin: 0
-            padding: 0.3vw 0
-            font-weight: 900
-            color: #555555
+            //display: flex
+            flex-direction: column
+            justify-content: space-around
+            position: absolute
             
-            
-            
-          .tag-style
-            position: relative
-            min-width: 4vw
             background-color: #FFCFBF
             border-radius: 1vw
-            margin: 0.2vw
-            cursor: pointer
+            z-index: 4
+            width: 20vw
+            height: auto
+            margin: 1vw
+            cursor: default
 
-            .tag-commend
-              display: none
-              //display: flex
-              flex-direction: column
-              justify-content: space-around
-              position: absolute
-              
-              background-color: #FFCFBF
-              border-radius: 1vw
-              z-index: 4
-              width: 20vw
-              height: auto
+            #sendbutton
+              width: 2.5vw
+              height: 2.5vw
+            
+            #tag-comment-send-region
               margin: 1vw
-              cursor: default
+              display: flex
+              flex-direction: row
+              align-items: center
+              justify-content: center
 
-              #sendbutton
-                width: 2.5vw
-                height: 2.5vw
-              
-              #tag-comment-send-region
-                margin: 1vw
+              #senderpic
+                width: 3vw
+                height: 3vw
+              .comment-insert
+                width: 7.5vw
+                background-color: #FFFFFF
+
+            #tag-comment-board
+              background-color: #FFFFFF
+              margin: 0vw 1vw 1vw 1vw
+              border-radius: 0.75vw
+
+              .tagcmt-wrap
                 display: flex
                 flex-direction: row
+                flex-wrap: nowrap
+                justify-content: space-around
                 align-items: center
-                justify-content: center
+                margin: 0.75vw
 
-                #senderpic
-                  width: 3vw
-                  height: 3vw
-                .comment-insert
-                  width: 7.5vw
-                  background-color: #FFFFFF
+                #cmtfrom
+                  background-color: #646464
+                  width: 2.5vw
+                  height: 2.5vw
+                  border-radius: 50%
 
-              #tag-comment-board
-                background-color: #FFFFFF
-                margin: 0vw 1vw 1vw 1vw
-                border-radius: 0.75vw
-
-                .tagcmt-wrap
-                  display: flex
-                  flex-direction: row
-                  flex-wrap: nowrap
-                  justify-content: space-around
-                  align-items: center
-                  margin: 0.75vw
-
-                  #cmtfrom
-                    background-color: #646464
-                    width: 2.5vw
-                    height: 2.5vw
-                    border-radius: 50%
-
-                  #cmttext
-                    background-color: #FFE4DC
-                    width: 80%
-                    border-radius: 1vw
-                
+                #cmttext
+                  background-color: #FFE4DC
+                  width: 80%
+                  border-radius: 1vw
+              
 
 
 
-          input
-            font-size: 0.9vw
-            margin: 0 0.5vw
-            padding: 0.3vw 0.8vw
-            border-radius: 1vw
-            border: none
-            outline: none
-            width: 0.5vw
-            
-            font-size: 0.9vw
-            
-          input::-webkit-input-placeholder
-            content: "test"
-            color: black
-          input:focus
-            width: 5vw
+        input
+          font-size: 0.9vw
+          margin: 0 0.5vw
+          padding: 0.3vw 0.8vw
+          border-radius: 1vw
+          border: none
+          outline: none
+          width: 0.5vw
           
-          input
-            background-color: #FFCFBF
-          input:hover
-            background-color: #FFAD94
+          font-size: 0.9vw
+          
+        input::-webkit-input-placeholder
+          content: "test"
+          color: black
+        input:focus
+          width: 5vw
         
-        .tag-field:nth-child(4)
-          .tag-style
-            background-color: #9FE4D4
-          .tag-style:hover
-            background-color: #32DEB5
-          input
-            background-color: #9FE4D4
-          input:hover
-            background-color: #32DEB5
-        
-        #buttons
-          *
-            width: auto
-            font-size: 1vw
-            border-radius: 2vw
-            padding: 0.5vw 1vw
-            margin: 0.5vw 0 0 0
-            float: right
-            border: solid 2px
-            background-color: #FDF2EF
-            border-color: var(--color-main)
-            cursor: pointer
-          *:hover
-            background-color: #FFDFDF
-            
-          input:nth-child(1)
-            margin-left: 1vw
+        input
+          background-color: #FFCFBF
+        input:hover
+          background-color: #FFAD94
+      
+      .tag-field:nth-child(4)
+        .tag-style
+          background-color: #9FE4D4
+        .tag-style:hover
+          background-color: #32DEB5
+        input
+          background-color: #9FE4D4
+        input:hover
+          background-color: #32DEB5
+      
+      #buttons
+        *
+          width: auto
+          font-size: 1vw
+          border-radius: 2vw
+          padding: 0.5vw 1vw
+          margin: 0.5vw 0 0 0
+          float: right
+          border: solid 2px
+          background-color: #FDF2EF
+          border-color: var(--color-main)
+          cursor: pointer
+        *:hover
+          background-color: #FFDFDF
+          
+        input:nth-child(1)
+          margin-left: 1vw
+
+#relation_graph
+  height: 30vh
+  width: 60vw
+  margin-bottom: 2vw
+  
+  background-color: #AAA
+  .node
+    fill: #ccc
+    stroke: #fff
+    stroke-width: 2px
+  .link
+    stroke: #777
+    stroke-width: 2px
+
 
 #bottom-region
   display: flex
@@ -456,14 +471,19 @@ footer
       justify-content: space-around
       align-items: flex-start
       
+      a
+        margin-left: 0
       .friend-img
         width: 3.2vw
         height: 3.2vw
+        //width: 5vw
+        //height: 5vw
         border-radius: 50%
         border: #CCCCCC solid 0.1vw
         margin-bottom: 0.5vw
       .vitualimg
         width: 3.2vw
+        //width: 5vw
         height: 0
       
   #right-pane
