modify FDG in profile

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -376,8 +376,11 @@ footer
           margin-left: 1vw
 
 #relation_graph
-  height: 30vh
+  height: 50vh
   width: 60vw
+  position: relative
+  transform: translate(-50%, 0)
+  left: 50%
   margin-bottom: 2vw
   
   background-color: #AAA
