--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -150,11 +150,11 @@ html
             p#msgtitle 留言板
             #eventmsg-board
               .eventmsg#eventmsg(style="display: none")
-                a(href="")
+                a
                   img.sender
                 #eventmsg-right
                   #eventmsg-righttop
-                    a#eventmsg-sendername(href="")
+                    a#eventmsg-sendername
                     p#event-date
                   #eventmsg-rightbottom
                     p#eventmsgtext
