--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -121,32 +121,75 @@ html
                 {% endfor %}
 
               #buttons
-                
                 {% if request.user.is_authenticated and request.user.pk == user.user.pk %}
-                //a(href="/logout/") 登出
                 a(href="{% url 'profile_edit' request.user.userextend.pk %}") 編輯
                 {% else %}
+                {% if not user.user in request.user.userextend.friends.all %}
+                // page user is not request user's friend yet
                 {% if not user.user in request.user.userextend.unverified_friends.all %}
+                {% if not request.user in user.unverified_friends.all %}
+                // page user hasn't been linked
                 input#create-link(type="button", value="建立連結")
                 input#request-sent(type="button", value="已送出", style="display: none")
                 {% else %}
+                // page user has sent friend request to request user
+                input#confirm-friend(type="button", value="確認連結")
+                input#cancel-friend(type="button", value="拒絕連結")
+                script.
+                  $(document).ready(function(){
+                    $("#confirm-friend").on("click", function() {
+                      console.log("friend confirmed")
+                      friend_reply_handler(
+                        "{% url 'friend_reply' %}",
+                        "{{ csrf_token}}",
+                        {{ user.user.pk }},
+                        1,
+                      )
+                    });
+                    $("#cancel-friend").on("click", function() {
+                      console.log("friend cancel")
+                      friend_reply_handler(
+                        "{% url 'friend_reply' %}",
+                        "{{ csrf_token}}",
+                        {{ user.user.pk }},
+                        0,
+                      )
+                    });
+                  })
+                {% endif %}
+                {% else %}
+                // page user pending verification of friend status
                 input#request-sent(type="button", value="已送出")
                 {% endif %}
+                {% else %}
+                // page user is already request user's friend
+                input#remove-friend(type="button", value="取消連結")
+                script.
+                  $(document).ready(function(){
+                    $("#remove-friend").on("click", function() {
+                      console.log("friend remove")
+                      friend_remove_handler(
+                        "{% url 'friend_remove' %}",
+                        "{{ csrf_token}}",
+                        {{ user.user.pk }},
+                      )
+                    });
+                  })
+                {% endif %}
+
                 input(type="button", value="傳訊息")
 
                 script.
                   $(document).ready(function(){
                     $("#create-link").on("click", function() {
-                      if ($("#create-link").val() == "建立連結") {
-                        console.log("friend request sent")
-                        friend_request_handler(
-                          "{% url 'friend_request' %}",
-                          "{{ csrf_token}}",
-                          {{ user.user.pk }},
-                        )
-                        $("#create-link").hide();
-                        $("#request-sent").show();
-                      }
+                      console.log("friend request sent")
+                      friend_request_handler(
+                        "{% url 'friend_request' %}",
+                        "{{ csrf_token}}",
+                        {{ user.user.pk }},
+                      )
+                      $("#create-link").hide();
+                      $("#request-sent").show();
                     });
                   })
                 {% endif %}
