modify few things

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -819,6 +819,8 @@ footer
       font-size: 1vw
       height: 8vw
       width: 100%
+    textarea:focus
+      border: 2px solid #B9B9B9
     
     select
       background-color: #EEEEEE
@@ -830,15 +832,14 @@ footer
       border: none
       margin-bottom: 1vw
       padding: 0 1vw
-
+      
+    input[type=file]
+      color: #AAA
+      font-size: 1vw
+      margin-left: 1vw
     
     #id_title
       height: 2.5vw
-
-    #id_image
-      color: #666666
-      font-size: 1vw
-      margin-left: 1vw
       
   .input-area
     width: 70%
