--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -2,26 +2,6 @@
 /*nav_bar
 /********
 
-@font-face
-  font-family: jf-openhuninn
-  src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
-  font-display: auto
-
-
-\:root
-  --background_color: #FFFFFF
-  --background_color_card: #E8E8E8
-  --fontcolor-navbarbutton: #000000
-  --fontcolor_header: #000000
-  --fontcolor_text: #000000
-  --color-main: #FAAD95
-  --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-header: normal
-  --font-family-text: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-text: normal
-  --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-card: normal
-
 *
   margin: 0
   padding: 0
@@ -70,7 +50,7 @@ a
   #title
     font-family: var(--font-family-header)
     font-style: var(--font-style-header)
-    font-weight: 100
+    font-weight: 400
     font-size: 2.7vw
 
     /*top: 0px;
@@ -118,8 +98,8 @@ a
     margin-right: 40%
     .button
       position: relative
-      transform: translate(-50%, -50%)
-      top: 50%
+      //transform: translate(-50%, -50%)
+      //top: 50%
       width: 1.5vw
       height: 1.5vw
       display: inline-block
@@ -142,7 +122,7 @@ a
       background-image: url('../file/feedbackicon.png')
       width: 2.5vw
       height: 2.5vw
-      transform: translate(-60%, -50%)
+      //transform: translate(-60%, -50%)
     
     a
       cursor: pointer
@@ -150,7 +130,7 @@ a
     .hover
       display: none
       position: absolute
-      transform: translate(-50%, 20%)
+      //transform: translate(-50%, 20%)
       //top: 1vw
       background-color: #555555
       color: white
@@ -162,11 +142,11 @@ a
       
     
     #aboutus-hover
-      transform: translate(-50%, 15%)
+      //transform: translate(-50%, 15%)
     #feedback-hover
-      transform: translate(-50%, -35%)
+      //transform: translate(-50%, -35%)
     #profile-hover
-      transform: translate(-50%, -15%)
+      //transform: translate(-50%, -15%)
       
       
     #event
