--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -1,23 +1,11 @@
-@font-face
-  font-family: jf-openhuninn
-  src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
-
-  font-display: auto
-
-
 \:root
-  --background-color: #FFFFFF
+  --background-color: #FFF6ED
   --background-color-card: #E8E8E8
+  --background-color-field: #F2F2F2
   --fontcolor-navbarbutton: #000000
   --fontcolor-header: #000000
   --fontcolor-text: #000000
   --color-main: #FAAD95
-  --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-header: normal
-  --font-family-text: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-text: normal
-  --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-card: normal
 
 /************
 /*entire area
