--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -87,7 +87,7 @@ a
   background-color: white
 
   /*UL/UR/DR/DL
-  border-radius: 4vw 4vw 0px 0px
+  border-radius: 4rem 4rem 0px 0px
   width: 100%
   top: 85%
   z-index: 1
@@ -116,10 +116,10 @@ a
   font-size: 36px
 
   /*UL/UR/DR/DL
-  border-radius: 1.5vw
+  border-radius: 1.5rem
   opacity: 1
   z-index: 2
-  margin: 1.5vw
+  margin: 1.5rem
 
 .card-bg
   position: absolute
@@ -128,7 +128,7 @@ a
   left: 0
   bottom: 0
   background-color: var(--color-main)
-  border-radius: 1.5vw
+  border-radius: 1.5rem
   opacity: 0.95
   z-index: 4
 
@@ -139,7 +139,7 @@ a
   transform: translate(-50%, 0)
   bottom: 0
   left: 50%
-  border-radius: 1.5vw
+  border-radius: 1.5rem
   width: 100%
   z-index: 3
 
@@ -153,7 +153,7 @@ a
 
   /*卡片背景沒有顯示
   /*UL/UR/DR/DL
-  border-radius: 1.5vw
+  border-radius: 1.5rem
   opacity: 0.7
   z-index: 4
 
@@ -183,16 +183,69 @@ a
   bottom: 0
   padding-bottom: 1vh
 
-@media only screen and (max-width: 1024px)
+@media only screen and (max-width: 1370px)
   /* display on phone
   #group-img
-    top: -5vw
+    top: 0vw
 
   #slogan
     margin: 0 14vw
 
   #img-cards
-    top: 35%
+    top: 60%
+
+  .card
+    margin-bottom: 5%
+
+  .flex-row
+    margin: 0
+
+//ipad pro直
+@media only screen and (max-width: 1024px) and (max-height: 1366px)
+  /* display on phone
+  #group-img
+    top: -2vw
+
+  #slogan
+    margin: 0 14vw
+
+  #img-cards
+    top: 40%
+
+  .card
+    margin-bottom: 5%
+
+  .flex-row
+    margin: 0
+
+//ipad橫
+@media only screen and (max-width: 1024px) and (max-height: 768px)
+  /* display on phone
+  #group-img
+    top: -2vw
+
+  #slogan
+    margin: 0 14vw
+
+  #img-cards
+    top: 50%
+
+  .card
+    margin-bottom: 5%
+
+  .flex-row
+    margin: 0
+
+@media only screen and (max-width: 800px)
+  /* display on phone
+  #group-img
+    top: 3vw
+
+  #slogan
+    margin: 0 14vw
+
+  #img-cards
+    top: 40%
 
   .card
     margin-bottom: 5%
