--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -1,4 +1,12 @@
-
+\:root
+  --background-color: #FFF6ED
+  --background-color-card: #E8E8E8
+  --background-color-field: #F2F2F2
+  --fontcolor-navbarbutton: #000000
+  --fontcolor-header: #000000
+  --fontcolor-text: #000000
+  --color-main: #FAAD95
+  
 *
   font-family: var(--font-family-text)
   padding: 0
@@ -13,14 +21,16 @@ body
   color: #FFCFBF
   opacity: 1
 
-#login-leftpic
-  width: 45vw
-  repeate: no-repeat
-  position: absolute
-  transform: translate(-50%, -50%)
-  top: 58%
-  left: 28%
-  z-index: 1
+#background-element
+    
+  #login-leftpic
+    width: 45rem
+    repeate: no-repeat
+    position: absolute
+    transform: translate(-50%, -50%)
+    top: 58%
+    left: 28%
+    z-index: 1
 
 #bubbles
   position: fixed
@@ -35,10 +45,6 @@ body
   z-index: -1
   top: 0
 
-#background-element
-  span
-    border-radius: 50%
-    display: block
 
 .grey-bubble
   position: absolute
@@ -55,8 +61,8 @@ body
   transform: translate(-50%, -50%) rotate(0.12turn)
   z-index: -2
 #grey-bubble1
-  height: 15vw
-  width:  15vw
+  height: 15rem
+  width:  15rem
   position: absolute
   transform: translate(-105%, -50%)
   top:    50%
@@ -66,8 +72,8 @@ body
   transform: translate(-50%, -50%) rotate(0.13turn)
   z-index: 2
 #grey-bubble2
-  height: 5vw
-  width:  5vw
+  height: 5rem
+  width:  5rem
   position: absolute
   transform: translate(200%, -50%)
   top:    50%
@@ -77,8 +83,8 @@ body
   transform: translate(-50%, -50%) rotate(0.86turn)
   z-index: 3
 #grey-bubble3
-  height: 4vw
-  width:  4vw
+  height: 4rem
+  width:  4rem
   position: absolute
   transform: translate(285%, -50%)
   top:    50%
@@ -88,8 +94,8 @@ body
   transform: translate(-50%, -50%) rotate(0.33turn)
   z-index: 4
 #grey-bubble4
-  height: 2.5vw
-  width:  2.5vw
+  height: 2.5rem
+  width:  2.5rem
   position: absolute
   transform: translate(600%, -50%)
   top:    50%
@@ -99,8 +105,8 @@ body
   transform: translate(-50%, -50%) rotate(0.12turn)
   z-index: -1
 #white-bubble1
-  height: 25vw
-  width:  25vw
+  height: 25rem
+  width:  25rem
   top:    50%
   left:   50%
   position: absolute
@@ -115,157 +121,53 @@ body
   left: 21%
   z-index: 1
   h1
-    font-size: 2.5vw
+    font-size: 2.5rem
     text-align: left
-    width: 20vw
-    margin-bottom: 1vw
+    width: 20rem
+    margin-bottom: 1rem
 
 .description
-  font-size: 0.9vw
-  margin-top: 1vw
+  font-size: 0.9rem
+  margin-top: 1rem
   position: absolute
   transform: translate(-50%, -50%)
   z-index: 1
   top: 60%
   left: 45%
   text-align: left
-  width: 15vw
+  width: 15rem
   p
-    margin-bottom: 0.4vw
+    margin-bottom: 0.4rem
 
 #panel1
   display: flex
   flex-direction: row
   flex-wrap: wrap
-  position: absolute
+  position: fixed
   top:  50%
-  left: 70%
-  -ms-transform: translate(-50%, -50%)
+  right: 0%
   transform: translate(-50%, -50%)
-  margin-top: 3%
-  width: 25vw
-
-#sign-up-panel
-  background-color: white
-  border: 0.2vw solid #FFC5B2
-  box-shadow: 5px 10px 25px 0px #00000026
-  border-radius: 3vh
-  display: flex
-  flex-direction: column
-  align-items: stretch
-  padding: 2vw
-  z-index: 10
-  width: 100%
-
-  h1
-    text-align: center
-    font-size: 3vw
-    margin: 1vw 0 1vw 0   
-  hr
-    border-top: #FFC5B2 solid 0.15vw
-    margin-bottom: 1vw
-
-  form 
-    display: flex
-    flex-direction: column
-    align-items: stretch
-
-  .input-area
-    border-radius: 2vh
-    height: 2vw
-    //font-size: 1.3vw
-    outline: none
-    text-indent: 1em
-    padding: 5px 0px 5px 0px
-    border: 0.15vw solid #FFC5B2
-    margin: 0.5vw 0.5vw 0
-  
-  .err-msg
-    font-size: 1.2vw
-    text-align: center
-    color: #FF7575
-    margin-top: 0.5vw
-        
-  #term-div
-    display: flex
-    flex-direction: row
-    align-items: center
-    flex-wrap: nowrap
-    label
-      margin-top: 0.7vw
-      margin-left: 0.8vw
-      font-size: 0.8vw
-    input
-      margin-top: 0.7vw
-      margin-left: 0.8vw
-  .buttons
-    //display: flex
-    //flex-direction: row
-    position: relative
-    margin: 5% 0 3% 0
-    outline: none
-    height: 5vw
-
-    input
-      //outline: none
-      position: absolute
-      transform: translate(-50%, -50%)
-      top: 50%
-      left: 50%
-      //margin: 0 1vw 0 50% 
-      padding: 5% 10% 5% 10%
-      background-color: #3AEDC2
-      border: none
-      border-radius: 3vh
-      height: auto
-      width: auto
-      outline: none 
-      font-size:  1.7vw
-
-    p
-      position: absolute
-      transform: translate(-50%, -60%)
-      top: 50%
-      right: 18%
-      //margin: 0 5% 0 0
-      text-align: center 
-      //padding-top: 8%
-      font-size:  1vw
-
-    #login
-      //margin: auto 0
-      font-size:  1.2vw
-      position: absolute
-      transform: translate(0, -50%)
-      top: 50%
-      right: 5%
-      color: #2ADDB2
-      //#3AEDC2
-
-    #login:hover
-      cursor: pointer
-      text-decoration: underline
-  
+  width: 25rem
   
 
 #login-panel
   background-color: white
-  border: 0.2vw solid #FFC5B2
+  border: 0.2rem solid #FFC5B2
   box-shadow: 5px 10px 25px 0px #00000026
   border-radius: 3vh
   display: flex
   flex-direction: column
   align-items: stretch
-  padding: 2vw
+  padding: 2rem
   z-index: 10
   width: 100%
 
   h1
     text-align: center
-    font-size: 3vw
-    margin: 1vw 0 2vw 0   
+    font-size: 3rem
+    margin: 1rem 0 2rem 0
   hr
-    border-top: #FFC5B2 solid 0.15vw
+    border-top: #FFC5B2 solid 0.15rem
 
   form 
     display: flex
@@ -274,21 +176,21 @@ body
 
   .input-area
     border-radius: 3vh
-    height: 3vw
-    font-size: 1.2vw
+    height: 3rem
+    font-size: 1.2rem
     outline: none
     text-indent: 1em
     padding: 5px 0px 5px 0px
-    border: 0.15vw solid #FFC5B2
+    border: 0.15rem solid #FFC5B2
   .input-description
-    margin: 1.5vw 0 0.5vw 0
-    font-size: 1.3vw
+    margin: 1.5rem 0 0.5rem 0
+    font-size: 1.3rem
 
   #forgot
-    font-size:  1vw
+    font-size:  1rem
     text-align: right
-    margin-top: 0.2vw
-    padding-right: 0.5vw
+    margin-top: 0.2rem
+    padding-right: 0.5rem
   #forgot:hover
     cursor: pointer
     text-decoration: underline
@@ -299,7 +201,7 @@ body
     position: relative
     margin: 7% 0 10% 0
     outline: none
-    height: 5vw
+    height: 5rem
 
     input
       //outline: none
@@ -307,7 +209,7 @@ body
       transform: translate(-50%, -50%)
       top: 50%
       left: 50%
-      //margin: 0 1vw 0 50% 
+      //margin: 0 1rem 0 50%
       padding: 5% 10% 5% 10%
       background-color: #3AEDC2
       border: none
@@ -315,7 +217,7 @@ body
       height: auto
       width: auto
       outline: none 
-      font-size:  1.7vw
+      font-size:  1.7rem
     input:hover
       cursor: pointer
 
@@ -327,11 +229,11 @@ body
       //margin: 0 5% 0 0
       text-align: center 
       //padding-top: 8%
-      font-size:  1vw
+      font-size:  1rem
 
     #sign-up
       //margin: auto 0
-      font-size:  1.2vw
+      font-size:  1.2rem
       position: absolute
       transform: translate(0, -50%)
       top: 50%
@@ -345,7 +247,109 @@ body
   
   hr
     margin: 0
+    
+#sign-up-panel
+  background-color: white
+  border: 0.2rem solid #FFC5B2
+  box-shadow: 5px 10px 25px 0px #00000026
+  border-radius: 3vh
+  display: flex
+  flex-direction: column
+  align-items: stretch
+  padding: 2rem
+  z-index: 10
+  width: 100%
 
+  h1
+    text-align: center
+    font-size: 3rem
+    margin: 1rem 0 1rem 0
+  hr
+    border-top: #FFC5B2 solid 0.15rem
+    margin-bottom: 1rem
+
+  form
+    display: flex
+    flex-direction: column
+    align-items: stretch
+
+  .input-area
+    border-radius: 2vh
+    height: 2rem
+    //font-size: 1.3rem
+    outline: none
+    text-indent: 1em
+    padding: 5px 0px 5px 0px
+    border: 0.15rem solid #FFC5B2
+    margin: 0.5rem 0.5rem 0
+  
+  .err-msg
+    font-size: 1.2rem
+    text-align: center
+    color: #FF7575
+    margin-top: 0.5rem
+        
+  #term-div
+    display: flex
+    flex-direction: row
+    align-items: center
+    flex-wrap: nowrap
+    label
+      margin-top: 0.7rem
+      margin-left: 0.8rem
+      font-size: 0.8rem
+    input
+      margin-top: 0.7rem
+      margin-left: 0.8rem
+  .buttons
+    //display: flex
+    //flex-direction: row
+    position: relative
+    margin: 5% 0 3% 0
+    outline: none
+    height: 5rem
+
+    input
+      //outline: none
+      position: absolute
+      transform: translate(-50%, -50%)
+      top: 50%
+      left: 50%
+      //margin: 0 1rem 0 50%
+      padding: 5% 10% 5% 10%
+      background-color: #3AEDC2
+      border: none
+      border-radius: 3vh
+      height: auto
+      width: auto
+      outline: none
+      font-size:  1.7rem
+
+    p
+      position: absolute
+      transform: translate(-50%, -60%)
+      top: 50%
+      right: 18%
+      //margin: 0 5% 0 0
+      text-align: center
+      //padding-top: 8%
+      font-size:  1rem
+
+    #login
+      //margin: auto 0
+      font-size:  1.2rem
+      position: absolute
+      transform: translate(0, -50%)
+      top: 50%
+      right: 5%
+      color: #2ADDB2
+      //#3AEDC2
+
+    #login:hover
+      cursor: pointer
+      text-decoration: underline
+  
+  
 //phone responsive
 @media only screen and (max-width: 450px)
   #bubbles
@@ -361,8 +365,8 @@ body
     left: 50%
     width: 80% 
     h1
-      font-size: 13vw
+      font-size: 13rem
       margin: 10px 0px
     p
-      font-size: 5vw
+      font-size: 5rem
       margin: 10px 0px
