--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -11,11 +11,12 @@
   flex-direction: row
   justify-content: space-between
   flex-wrap: wrap
+  align-items: center
   position: fixed
   top: 0
   left: 0
   width: 100%
-  height: 3.5vw
+  height: 4rem
   background-color: var(--color-main)
 
   /*UpLeft/UR/DR/DL
@@ -39,8 +40,8 @@
     transform: translate(-50%, -50%)
     top: 45%
     left: 50%
-    width: 7vw
-    height: 7vw
+    width: 7rem
+    height: 7rem
     content: url("../file/connectloading.gif")
     z-index: 7
 
@@ -51,10 +52,10 @@ a
     font-family: var(--font-family-header)
     font-style: var(--font-style-header)
     font-weight: 400
-    font-size: 2.7vw
+    font-size: 2.7rem
 
     /*top: 0px;
-    line-height: 3.5vw
+    line-height: 3.5rem
     color: var(--fontcolor_header)
     margin-left: 3%
 
@@ -63,14 +64,14 @@ a
   form
     position: relative
     input
-      height: 2vw
-      width: 25vw
-      border-radius: 1vw
+      height: 2rem
+      width: 25rem
+      border-radius: 1rem
       border: none
       outline: none
-      margin-top: 0.75vw
+      margin-top: 0.75rem
       background-color: #FFCFBF
-      padding-left: 1vw
+      padding-left: 1rem
     
 
   ul
@@ -86,13 +87,13 @@ a
   li
     display: block
     float: right
-    width: 1.5vw
-    height: 1.5vw
+    width: 1.5rem
+    height: 1.5rem
 
     white-space: nowrap
     word-break: normal
 
-    font-size: 1.7vw
+    font-size: 1.7rem
     font-family: var(--font-family-text)
     font-style: var(--font-style-text)
     margin-right: 40%
@@ -100,8 +101,8 @@ a
       position: relative
       //transform: translate(-50%, -50%)
       //top: 50%
-      width: 1.5vw
-      height: 1.5vw
+      width: 1.5rem
+      height: 1.5rem
       display: inline-block
       overflow: hidden
       background-repeat: no-repeat
@@ -120,8 +121,8 @@ a
       
     #feedback
       background-image: url('../file/feedbackicon.png')
-      width: 2.5vw
-      height: 2.5vw
+      width: 2.5rem
+      height: 2.5rem
       //transform: translate(-60%, -50%)
     
     a
@@ -131,13 +132,13 @@ a
       display: none
       position: absolute
       //transform: translate(-50%, 20%)
-      //top: 1vw
+      //top: 1rem
       background-color: #555555
       color: white
-      border-radius: 0.4vw
-      //border: solid #888888 0.2vw
-      padding: 0.2vw 0.5vw
-      font-size: 1vw
+      border-radius: 0.4rem
+      //border: solid #888888 0.2rem
+      padding: 0.2rem 0.5rem
+      font-size: 1rem
       z-index: 2
       
     
@@ -157,40 +158,40 @@ a
       background-image: url('../file/msgicon.png')
     #aboutus
       background-image: url('../file/groupicon.png')
-      width: 1.7vw
-      height: 1.7vw
+      width: 1.7rem
+      height: 1.7rem
     #profile
       /*background-image: url('../file/personalinfoicon.png')
-      width: 2vw
-      height: 2vw
+      width: 2rem
+      height: 2rem
       background-color: white
       border-radius: 50%
-      border: solid #888888 0.15vw
+      border: solid #888888 0.15rem
       #userpic
-        width: 2vw
-        height: 2vw
+        width: 2rem
+        height: 2rem
     #logout
       background-image: url('../file/logouticon.png')
       
     #notificationboard
       display: none
-      margin: 0.5vh 0 0 -1vw
-      padding: 1vw
+      margin: 0.5vh 0 0 -1rem
+      padding: 1rem
     
       position: relative
       height: 0vh
-      width: 22vw
+      width: 22rem
       top: 0
-      right: 8vw
+      right: 8rem
       background-color: #FAFAFA
       //opacity: 0.95
       
-      border-radius: 2vw
+      border-radius: 2rem
       border: solid 2px #CCC
       
       #noticeheading
-        font-size: 2.5vw
-        margin: 0.5vw 0 0.5vw 1vw
+        font-size: 2.5rem
+        margin: 0.5rem 0 0.5rem 1rem
     
       #notices
         display: flex
@@ -215,16 +216,16 @@ a
           justify-content: flex-start
           align-items: stretch
           background-color: white
-          margin: 0.5vw
-          padding: 0.2vw
-          border-radius: 1vw
+          margin: 0.5rem
+          padding: 0.2rem
+          border-radius: 1rem
           
           a
             margin: 0
           
           #noticesenderpic
-            height: 3.5vw
-            width: 3.5vw
+            height: 3.5rem
+            width: 3.5rem
             border-radius: 50%
             background-color: white
         
@@ -234,7 +235,7 @@ a
             flex-wrap: nowrap
             justify-content: space-evenly
             align-content: flex-start
-            margin: 0 0.5vw
+            margin: 0 0.5rem
             
             
             #notice-righttop
@@ -247,21 +248,21 @@ a
               //background-color: purple
               
               p
-                font-size: 1vw
+                font-size: 1rem
                 color: #333333
-                line-height: 1.2vw
-                margin: 0 0.2vw
+                line-height: 1.2rem
+                margin: 0 0.2rem
               
               #noticesendername
-                font-size: 1.2vw
+                font-size: 1.2rem
                 font-weight: 600
               #notice-detail
-                font-size: 1vw
+                font-size: 1rem
               #noticeevent
-                font-size: 1.2vw
+                font-size: 1.2rem
                 font-weight: 600
-                width: 7.2vw
-                //max-width: 8vw
+                width: 7.2rem
+                //max-width: 8rem
                 overflow: hidden
                 white-space: nowrap
                 text-overflow: ellipsis
@@ -269,7 +270,7 @@ a
               
             #notice-rightbottom
               #notice-date
-                font-size: 0.85vw
+                font-size: 0.85rem
                 color: #777777
                 font-weight: 900
                 //background-color: pink
