fix part of layout UI probs

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -139,7 +139,7 @@ footer
       align-items: center
       margin-right: 4%
       height: 3.5rem
-      width: 48rem
+      width: 48vw
       border-radius: 1.2rem
       background-color: #EEEEEE
       cursor: pointer
@@ -317,6 +317,7 @@ footer
       a
         margin-left: 0
       #virtualdiv
+        height: 0
         .eventpost
           box-shadow: none
         *
