--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -2,6 +2,21 @@
 /*nav_bar
 /********
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
+
+\:root
+  --background-color: #FFFFFF
+  --background-color-card: #E8E8E8
+  --fontcolor-navbarbutton: #000000
+  --fontcolor-header: #000000
+  --fontcolor-text: #000000
+  --color-main: #FAAD95
+  --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
+  --font-style-header: normal
+  --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
+  --font-style-text: normal
+  --font-family-card: "Noto Sans TC", "Tahoma", "Arial"
+
 *
   margin: 0
   padding: 0
@@ -16,7 +31,7 @@
   top: 0
   left: 0
   width: 100%
-  height: 4rem
+  height: 4vw
   background-color: var(--color-main)
 
   /*UpLeft/UR/DR/DL
@@ -52,11 +67,11 @@ a
     font-family: var(--font-family-header)
     font-style: var(--font-style-header)
     font-weight: 400
-    font-size: 2.7rem
+    font-size: 2.7vw
 
     /*top: 0px;
-    line-height: 3.5rem
-    color: var(--fontcolor_header)
+    line-height: 4vw
+    color: var(--fontcolor-header)
     margin-left: 3%
 
 /*button
@@ -64,8 +79,8 @@ a
   form
     position: relative
     input
-      height: 2rem
-      width: 25rem
+      height: 2.5vw
+      width: 25vw
       border-radius: 1rem
       border: none
       outline: none
