--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -111,6 +111,12 @@ html
           
           #virtualdiv
             .eventpost
+          #virtualdiv
+            .eventpost
+          #virtualdiv
+            .eventpost
+          #virtualdiv
+            .eventpost
             
     {% load static %}
     image#gotop(src="{% static 'file/gotop.png' %}")
