--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -194,7 +194,6 @@ html
                   })
                 {% endif %}
                 
-        #graph
         
         #bottom-region
           #left-pane
@@ -212,8 +211,12 @@ html
               {% empty %}
               p 快去建立連結吧
               {% endfor %}
-              .vitualimg
-              .vitualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
+              .virtualimg
             //-
               hr#divider1.lefthr
               p 個性
@@ -432,6 +435,8 @@ html
               {% endfor %}
 
               // so many cards (use for to solve it after the backend has constructed)
+                              
+      #graph
       footer
         {% include "footer.pug" %}
 
