fix comment of event, average comment ajax not done yet

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -699,7 +699,7 @@ footer
                   width: 12rem
                   margin: 0.1rem 1.2rem 0 1rem
                   color: #333333
-          #eventcomment-insert
+          .eventcomment-insert
             //position: absolute
             //bottom: 0
             display: flex
